{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 30,
  "lineage": "0640f240-8cbd-936b-c26f-d4281fa311ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104629106545:loadbalancer/app/bursting-mackerel-dev/3a8e18eb3583e8ca",
            "arn_suffix": "app/bursting-mackerel-dev/3a8e18eb3583e8ca",
            "desync_mitigation_mode": "defensive",
            "dns_name": "bursting-mackerel-dev-1992767111.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:104629106545:loadbalancer/app/bursting-mackerel-dev/3a8e18eb3583e8ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bursting-mackerel-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03dfe1cd97d39d8bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0559b0892d5310ee7"
              },
              {
                "subnet_id": "subnet-07caf6f1eefbce3c6"
              },
              {
                "subnet_id": "subnet-084f774c7895f7f4e"
              },
              {
                "subnet_id": "subnet-0fc5de9875e964af5"
              }
            ],
            "subnets": [
              "subnet-0559b0892d5310ee7",
              "subnet-07caf6f1eefbce3c6",
              "subnet-084f774c7895f7f4e",
              "subnet-0fc5de9875e964af5"
            ],
            "vpc_id": "vpc-0a8258827074381b3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_subnets.public",
            "random_pet.base_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104629106545:listener/app/bursting-mackerel-dev/3a8e18eb3583e8ca/07c3ffdc41da47b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104629106545:targetgroup/bursting-mackerel-dev/d79e3237764477e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104629106545:listener/app/bursting-mackerel-dev/3a8e18eb3583e8ca/07c3ffdc41da47b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:104629106545:loadbalancer/app/bursting-mackerel-dev/3a8e18eb3583e8ca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app_http",
            "aws_security_group.lb",
            "data.aws_subnets.public",
            "random_pet.base_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104629106545:targetgroup/bursting-mackerel-dev/d79e3237764477e8",
            "arn_suffix": "targetgroup/bursting-mackerel-dev/d79e3237764477e8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104629106545:targetgroup/bursting-mackerel-dev/d79e3237764477e8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bursting-mackerel-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a8258827074381b3"
          },
          "dependencies": [
            "random_pet.base_name"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104629106545:security-group/sg-03dfe1cd97d39d8bd",
            "description": "sg for bursting-mackerel-dev-dev load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dfe1cd97d39d8bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bursting-mackerel-dev-lb",
            "name_prefix": "",
            "owner_id": "104629106545",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8258827074381b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_pet.base_name"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104629106545:security-group/sg-09c85d66b7df9147d",
            "description": "sg for bursting-mackerel-dev ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c85d66b7df9147d",
            "ingress": [],
            "name": "bursting-mackerel-dev-task",
            "name_prefix": "",
            "owner_id": "104629106545",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8258827074381b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_pet.base_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104629106545:security-group-rule/sgr-0b67fdae39d9fb2b9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b67fdae39d9fb2b9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03dfe1cd97d39d8bd",
            "security_group_rule_id": "sgr-0b67fdae39d9fb2b9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_security_group.task",
            "random_pet.base_name"
          ]
        },
        {
          "index_key": "task",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104629106545:security-group-rule/sgr-00f313034fab2fdd7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00f313034fab2fdd7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09c85d66b7df9147d",
            "security_group_rule_id": "sgr-00f313034fab2fdd7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_security_group.task",
            "random_pet.base_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104629106545:security-group-rule/sgr-0ace93de082ad62f4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ace93de082ad62f4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03dfe1cd97d39d8bd",
            "security_group_rule_id": "sgr-0ace93de082ad62f4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "random_pet.base_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "task_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104629106545:security-group-rule/sgr-00212a9df24b0f2a1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00212a9df24b0f2a1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03dfe1cd97d39d8bd",
            "security_group_id": "sg-09c85d66b7df9147d",
            "security_group_rule_id": "sgr-00212a9df24b0f2a1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_security_group.task"
          ]
        }
      ]
    }
  ]
}